[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fixup"
authors = [{name = "Jasha Sommer-Simpson"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
  "libcst",
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pylint",
    "pyflakes",
    "mypy",
    "pyright",
    "black",
    "isort",
]
# doc = ["sphinx"]

[project.scripts]
fixup = "fixup:main"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -s"
