[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fixup"
authors = [{name = "Jasha Sommer-Simpson"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
  # "libcst",
  "fixit",
]

[project.optional-dependencies]
test = [
    "black",
    "isort",
    "mypy",
    "pyflakes",
    "pylint",
    "pytest",
    # "pyright",  # should be installed via npm
]
# doc = ["sphinx"]

[project.scripts]
fixup = "fixup:main"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -s"

[tool.mypy]
strict = true
